# monero-lw

./: .dockerignore  .gitignore  .gitmodules  Makefile  MyMonero-Dockerfile  README.md  dev.compose.yaml  docker-compose.yaml  env.example  init_lws_admin.sh  mymonero-entrypoint.sh  prod.compose.yaml  release.compose.yaml  release.sh
backend/: package-lock.json  package.json  sample.package.json
backend/src/: server.ts
backend/src/interfaces/: main.ts
backend/src/routes/: main.ts
frontend/: README.md  package-lock.json
lws-web/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
lws-web/lws/: app.py  broker.py  config.py  factory.py  filters.py  helpers.py  models.py
lws-web/lws/routes/: auth.py  meta.py  wallet.py
lws-web/lws/static/: main.css
lws-web/lws/templates/: index.html  login.html  setup.html
lws-web/lws/templates/includes/: base.html
lws-web/lws/templates/utils/: index.html  mnemonic.html
lws-web/lws/templates/wallet/: add.html  list.html  show.html
lwsadmin/: Dockerfile  Makefile  README.md  pyproject.toml
lwsadmin/lws/: __init__.py  app.py  config.py  factory.py  filters.py  helpers.py  models.py
lwsadmin/lws/routes/: auth.py  htmx.py  meta.py  wallet.py
lwsadmin/lws/static/: main.css
lwsadmin/lws/templates/: index.html  login.html
lwsadmin/lws/templates/htmx/: create_wallet.html  import_wallet.html  label_wallet.html  mouse.html  set_height.html  show_wallets.html
lwsadmin/lws/templates/includes/: base.html
lwsadmin/lws/templates/utils/: mnemonic.html
lwsadmin/lws/templates/wallet/: add.html  create.html  show.html
(+2 files in other folders)
