[tool.poetry]
name = "lws-web"
version = "0.1.0"
description = ""
authors = ["lza_menace <lza_menace@protonmail.com>"]
readme = "README.md"
packages = [{include = "lws", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
peewee = "^3.15.3"
quart-auth = "^0.8.0"
quart-bcrypt = "^0.0.6"
requests = "^2.29.0"
monero = "^1.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "lws.app:run()"
